Updated DB connection string for lambda apps. Fixed authorizatioin for getting classroom contents.
